# dev

./: .gitignore
Assembly/: 32  32.asm  64.asm  HelloWorld.s  Makefile  hello.s  hello2.s  write.s
Assembly/stack/: hello  helloworld.asm
Docker/DockerNewStart/: docker-compose.yaml  dockerfile.php
Docker/c_cxx_mac/: DockerfileBuildEnv
Docker/cloudbee/: docker-compose.yml
Docker/gcc2/: main.c
Docker/myDocker/: Dockerfile-node  Dockerfile-ubuntu  docker-compose.yml  docker-compose.yml.START  functions_examples.sh  setup.sh
Docker/replaceXAMPP/: docker-compose.yml
Docker/techOSTEEL/: .env.example  docker-compose.yml
Emacs/: index.html
Go/: main.go
Go/testing_modules/: go.mod  hello.go  strings.go
Go/testing_workspaces/: backup.go  go.mod  main.go
JavaScript/: package.json
JavaScript/JScomplete/: package.json
JavaScript/ModernJS/: 009typeConversion.js  012emplateLiterals.js  ModernJS.org  VsCode.org  app.js  app12.js  app13.js  index.html  myhtml.html  styles.css
JavaScript/NodeJServer/: index.html  package.json  server.js
JavaScript/The_JavaScript_Bible_-_Bootcamp_2022/: index.html  index.js
JavaScript/mdn/: main.js
Jupyter/: golang.ipynb
Ruby/: first.rb
c++/test/: hi.cpp  (+1 more)
cmake/: CMakeLists.txt
cmake/my_cmake_lessons/1_helloWorld/: CMakeLists.txt
cmake/my_cmake_lessons/2_BasicProject/: CMakeLists.txt  main.cc  my_lib.cc  my_lib.h
cmake/my_cmake_lessons/4_VariablesOptions/: CMakeLists.txt
cmake/my_cmake_lessons/4_VariablesOptions/app/: CMakeLists.txt  main.cc
cmake/my_cmake_lessons/4_VariablesOptions/src/my_lib/: my_lib.cc
(+200 files in other folders)
